app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/name: silly-demo
  name: silly-demo
spec:
  ingressClassName: traefik
  rules:
    - host: sillydemo.52.71.18.60.nip.io
      http:
        paths:
          - backend:
              service:
                name: silly-demo
                port:
                  number: 8080
            path: /
            pathType: ImplementationSpecific
